Add application documentation

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,10 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+# openapi documentation
+mp.openapi.extensions.smallrye.info.title=evevnt-manager-api
+mp.openapi.extensions.smallrye.info.version=2.0
+mp.openapi.extensions.smallrye.info.description=This is the API for the event manager project.
+mp.openapi.extensions.smallrye.info.contact.name=@Herzog
+mp.openapi.extensions.smallrye.info.contact.url=https://github.com/NathalieHerzog
